# yandex-cloud-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: navigation.md  sources.md
references/contracts/: mcp_catalog.schema.json  skill_manifest.schema.json  skill_manifest.yaml
references/languages/: cli.md  dotnet.md  go.md  java.md  nodejs.md  python.md  terraform.md
references/mcp/: catalog.yaml  codex-setup.md  registry.md
references/services/billing/: README.md  api.md  configuration.md  gotchas.md  patterns.md
references/services/compute/: README.md  api.md  configuration.md  gotchas.md  patterns.md
references/services/iam/: README.md  api.md  configuration.md  gotchas.md  patterns.md
references/services/object-storage/: README.md  api.md  configuration.md  gotchas.md  patterns.md
references/services/resource-manager/: README.md  api.md  configuration.md  gotchas.md  patterns.md
references/services/vpc/: README.md  api.md  configuration.md  gotchas.md  patterns.md
references/tutorials/: index.md  sdk.md  terraform.md
references/workflows/: api_sdk.md  auth.md  billing_detail.md  inventory.md  mcp_setup.md  terraform_iac.md  troubleshooting.md
scripts/: yc_mcp_catalog.py
scripts/fixtures/: README.md  billing_api_resource_usage_sample.json  billing_detail_overall_sanitized_sample.csv  billing_detail_per_resource_sanitized_sample.csv  billing_s3_select_resource_detailing.sql  billing_sample.csv
tests/: test_yc_mcp_catalog.py
